<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSpendingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="100sp"
            android:paddingRight="100sp">

            <TextView
                android:id="@+id/addSpendingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/add_spending"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etAddSpendingRekening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/rekening"
                android:inputType="number" />

            <EditText
                android:id="@+id/etAddSpendingJumlah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/jumlah"
                android:inputType="number" />

            <EditText
                android:id="@+id/etAddSpendingKeterangan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/keterangan"
                android:inputType="text" />

            <EditText
                android:id="@+id/etAddSpendingJenisPengeluaran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/jenis_pengeluaran"
                android:inputType="text" />

            <EditText
                android:id="@+id/etAddSpendingDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/tanggal"
                android:inputType="date" />

            <Button
                android:id="@+id/submitAddSpendingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:text="@string/submit"/>

        </LinearLayout>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>