<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddIncomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">



            <TextView
                android:id="@+id/addTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_income"
                android:textSize="20sp" />



            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="28dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/tujuan_penyimpanan">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRekening"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <!--            <EditText-->
            <!--                android:id="@+id/etJumlah"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="32dp"-->
            <!--                android:ems="10"-->
            <!--                android:hint="@string/jumlah"-->
            <!--                android:inputType="number" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="15dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/jumlah">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etJumlah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <!--            <EditText-->
            <!--                android:id="@+id/etKeterangan"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="32dp"-->
            <!--                android:ems="10"-->
            <!--                android:hint="@string/keterangan"-->
            <!--                android:inputType="text" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="15dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/keterangan">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etKeterangan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <!--            <EditText-->
            <!--                android:id="@+id/etDate"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="32dp"-->
            <!--                android:ems="10"-->
            <!--                android:hint="@string/tanggal"-->
            <!--                android:inputType="date" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="15dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/keterangan">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:text="@string/submit"/>

        </LinearLayout>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>